Adding Swagger Generator Code.

--- a/CodeToolsModules/CodeToolsSwagger/pom.xml
+++ b/CodeToolsModules/CodeToolsSwagger/pom.xml
@@ -19,6 +19,7 @@
 		<module>CodeToolsSwaggerAnnotations</module>
 		<module>CodeToolsSwaggerDependencies</module>
 		<module>CodeToolsSwaggerProcessors</module>
+		<module>CodeToolsSwaggerGenerators</module>
 	</modules>
 	
 	<properties>
